[gd_scene load_steps=3 format=3 uid="uid://dv0b0y6f2ikov"]

[ext_resource type="Script" uid="uid://dxatodixkjqdr" path="res://assets/ui/pause_menu/pause_menu.gd" id="1_bvxk8"]
[ext_resource type="PackedScene" uid="uid://c2ukvs58nra0w" path="res://assets/ui/options_menu/options_menu.tscn" id="2_2cwxi"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
z_index = 1000
custom_minimum_size = Vector2(480, 270)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvxk8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 0.980392)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(164, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_right = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_2cwxi")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
